crates/analyzer/tests/snapshots/errors__call_address_with_wrong_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `bool` can not be used as a parameter to `address(..)`
  ┌─ [snippet]:3:11
  │
3 │   address(true)
  │           ^^^^ wrong type
  │
  = Note: address(..) expects a parameter of a contract type, numeric or address


